--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proposicional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proposicional.md
@@ -16,7 +16,7 @@ Con fin de introducirnos más en profundidad en los conceptos de la lógica prop
 	- Todas las letras proposicionales.
 	- Si $P$ y $Q$ son fórmulas bien formadas, entonces $(¬P)$, $(P \rightarrow Q)$ también son fórmulas bien formadas (fórmulas compuestas).
 
-Si bien el alfabeto original permite construir todas las operaciones lógicas utilizando únicamente los conectivos lógicos anteriormente expuestos, se puede aplicar ciertas reglas de reescritura con fin facilitar la escritura de fórmulas y evitar complejidades innecesarias, se aceptan las siguientes reglas de reescritura:
+Si bien el alfabeto original permite construir todas las operaciones lógicas utilizando únicamente los conectivos lógicos anteriormente expuestos, se puede aplicar ciertas reglas de reescritura con el fin de facilitar la escritura de fórmulas y evitar complejidades innecesarias, se aceptan las siguientes reglas de reescritura:
 - $(P \wedge Q)$ se escribe como $(¬(P \rightarrow (¬Q)))$.
 - $(P \vee Q)$ se escribe como $((¬P) \rightarrow Q)$.
 - $(P \equiv Q)$ se escribe como $((P \rightarrow Q) \wedge (Q \rightarrow P))$.
@@ -48,7 +48,7 @@ Para verificar si una sentencia lógicamente válida es ***deducible***, solo ha
 ### Deducción en la Lógica Proposicional
 La deducción en la lógica proposicional es un poco diferente a la presentada en la unidad anterior aunque parte de la misma base, para comenzar se propone una serie de esquemas de axiomas que garantiza la tautología de cualquier fórmula bien formada y una regla de inferencia que puede ser mediante ***modus ponens*** o ***modus tollens***.
 - **Esquema de Axiomas**:
-	- $A$, $B$ y $C$ son metavariables que representan fórmulas bien formadas en $L$.
+	- $A$, $B$ y $C$ son metavariables que representan fórmulas bien formadas en $\mathcal{L}$.
 		1. $L_1: (A \rightarrow (B \rightarrow A))$.
 		2. $L_2: ((A \rightarrow (B \rightarrow C)) \rightarrow ((A \rightarrow B) \rightarrow (A \rightarrow C)))$.
 		3. $L_3: (((¬B) \rightarrow (¬A)) \rightarrow (((¬B) \rightarrow A) \rightarrow B))$.
@@ -64,7 +64,7 @@ El tercer paso se obtiene aplicar la regla de inferencia modus ponens del axioma
 >[!tldr] Meta-Teorema de la Deducción
 >Sea $S$ un conjunto de fórmulas bien formadas donde $A$ y $B$ son fórmulas bien formadas, si $S, A \vdash B$ entonces se cumple que $S \vdash A \rightarrow B$.
 ### Teoremas en la Lógica Proposicional
-Al igual que en la primera unidad, se puede probar que un esquema es un teorema en $\mathcal{L}$, si puede ser alcanzada utilizando solo axiomas y reglas de inferencia. El procedimiento es idéntico al de deducción ya previamente mostrado con la particularidad de que solo se utilizan axiomas en la prueba. Se puede extender la idea de prueba usando teoremas probados previamente como una abreviatura de su propia deducción.
+Al igual que en la primera unidad, se puede probar que un esquema es un teorema en $\mathcal{L}$, si puede ser alcanzada utilizando solo axiomas y reglas de inferencia. Se puede extender la idea de prueba usando teoremas probados previamente como una abreviatura de su propia deducción.
 Existen un conjunto de teoremas que ya han sido probados y demostrados, los cuales pueden ser reutilizados cuando se realizan las demostraciones, estos teoremas son los siguientes:
 - $\vdash A$ para cualquier axioma $A$.
 - $A \rightarrow A$ por meta-teorema de la deducción.
