--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 3/1. Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 3/1. Calculo de Predicados.md
@@ -38,7 +38,7 @@ Para el cálculo de predicados la situación es más compleja, ya que para estab
 2. Los valores de las constantes.
 3. Que funciones y relaciones pueden ser representadas con las letras funcionales y predicativas.
 
-Ahora definiremos con mayor precisión los conceptos de satisfacibilidad y verdad en una interpretación. Dada una interpretación con dominio $D$, consideremos $\Sigma$ como el conjunto de secuencias numerables de elementos de $D$. Estas secuencias están formadas por elementos de $D$, tienen la forma $s = (b_1, b_2, ..., b_n, ...)$. Utilizaremos estas secuencias para definir la satisfacibilidad de las fórmulas bien formadas del sistema $P$.
+Ahora definiremos con mayor precisión los conceptos de satisfacibilidad y verdad en una interpretación. Dada una interpretación con dominio $D$, consideremos $\Sigma$ como el conjunto de secuencias numerables de elementos de $D$. Estas secuencias están formadas por elementos de $D$, las cuales poseen la forma $s = (b_1, b_2, ..., b_n, ...)$. Utilizaremos estas secuencias para definir la satisfacibilidad de las fórmulas bien formadas del sistema $P$.
 Dada una secuencia $s = (b_1, b_2, ..., b_n, ...)$ de $\Sigma$, definimos una función $s^*$ cuya entrada es el conjunto de todos los términos del lenguaje $P$ y que toma valores en $D$. La función $s^*$ se define por casos de acuerdo a los diferentes tipos de términos que puede tener como parámetro, por lo tanto:
 - Si $t$ es una variable $x_i$ entonces $s^*(t) = s^*(x_i) = b_i$, es decir, $s^*$ toma el valor i-ésimo de la secuencia $s$.
 - Si $t$ es una constante individual, entonces $s^*(t)$ es el elemento fijo de $D$ asignado a esa constante por interpretación.
@@ -47,8 +47,8 @@ Dada una secuencia $s = (b_1, b_2, ..., b_n, ...)$ de $\Sigma$, definimos una fu
 Dada una secuencia $s = (b_1, b_2, ..., b_n, ...)$ de $\Sigma$ decimos que $s$ satisface a una fórmula bien formada $A$ de acuerdo a los siguientes casos:
 1. Si $A$ es una fórmula bien formada atómica $p_j(t_1, t_2, ..., t_n )$, sea $P_j$ la relación que le corresponde a $p_j$ por la interpretación, entonces la secuencia $s$ satisface a $A$ si $P_j(s^*(t_1), s^*(t_2), ..., s^*(t_n))$, es decir, la n-upla $(s^*(t_1), s^*(t_2), ..., s^*(t_n)) \in P_j$.
 2. $s$ satisface $¬A$ si y solo si $s$ no satisface a $A$.
-3. $s$ satisface $A \rightarrow B$ si $s$ satisface $B$ o si $s$ no satisface a $A$.
-4. $s$ satisface $(\forall x_i) A$ si cada secuencia $w$ de $\Sigma$ que difiere de $s$ en a lo sumo en el i-ésimo componente satisface a $A$.
+3. $s$ satisface $A \rightarrow B$ si y solo si $s$ satisface $B$ o $s$ no satisface a $A$.
+4. $s$ satisface $(\forall x_i) A$ si y solo si cada secuencia $w$ de $\Sigma$ que difiere de $s$ en a lo sumo en el i-ésimo componente satisface a $A$.
 ### Verdad y Falsedad
 Una fórmula bien formada $A$ es verdadera para una interpretación particular si, cada sentencia en $\Sigma$ satisface a $A$. Por lo tanto, una fórmula bien formada es falsa en una interpretación dada si ninguna de las secuencias en $\Sigma$ satisface a $A$.
 Puede que una fórmula bien formada $A$ no sea ni verdadera ni falsa en una interpretación, puesto que puede existir parte de las secuencias en $\Sigma$ que no satisfagan a $A$ y otras sí. Con esto en mente y aplicando algunas reglas del cálculo proposicional, tenemos que:
