--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 4/1. Substitucion y Unificacion.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 4/1. Substitucion y Unificacion.md
@@ -1,6 +1,6 @@
 En el cálculo proposicional se puede transformar una fórmula bien formada arbitraria en otra equivalente que se encuentre en forma normal conjuntiva. En el lenguaje del cálculo de predicados tenemos cuantificadores que introducen una dificultad adicional para estas transformaciones.
 ## Forma Prenexa
-A pesar de esto existe una forma especial denominada ***forma prenexa*** en la que todos los cuantificadores preceden a una fórmula bien formada sin ellos, es decir, todos los cuantificadores se encuentran a la derecha de la fórmula bien formada.
+A pesar de esto existe una forma especial denominada ***forma prenexa*** en la que todos los cuantificadores preceden a una fórmula bien formada sin ellos, es decir, todos los cuantificadores se encuentran a la izquierda de las fórmulas bien formada.
 Una fórmula bien formada está en forma prenexa si cada variable está cuantificada y todos los cuantificadores preceden a una sentencia sin cuantificadores. El conjunto de los cuantificadores se denomina ***prefijo*** y las sentencias siguientes reciben el nombre de matriz.
 Supongamos entonces que tenemos la siguiente fórmula bien formada $(((\forall x)A(x) \vee (\exists y)B(y)) \wedge (\exists z)C(z))$ dicha sentencia transformada a forma prenexa quedaría de la siguiente manera $(\forall x)(\exists y)(\exists z)((A(x)  \vee B(y))\wedge C(z))$.
 >[!caution] Orden de los Cuantificadores en la Forma Prenexa
