--- a/5º Año/Ética y Deontología  Profesional/Unidad 2/2. Codigos de Etica para los Licenciados en Informatica.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 2/2. Codigos de Etica para los Licenciados en Informatica.md
@@ -33,7 +33,7 @@ La ética informática es una ciencia que se encarga del comportamiento del ser 
 10. No permitir la utilización fraudulenta de su titulación por personas que, ilegítimamente, sin la acreditación y preparación necesarias, lleven a cabo actuaciones profesionales correspondientes a un/a Lic. en Informática.
 11. Realizar su actividad en términos de máxima imparcialidad, cuando se encuentre ante intereses personales o institucionales contrapuestos.
 
-**En cuanto a la imagen de la profesión deberá:**
+En cuanto a la imagen de la profesión deberá:
 - Promover el conocimiento general de la profesión y su aportación al bien público.
 - Difundir el conocimiento de la Informática mediante la participación en organizaciones profesionales, congresos y publicaciones.
 - Apoyar, como miembros de una profesión, a otros/as Lic. en Informática que se esfuercen en actuar según este Código.
