--- a/5º Año/Ética y Deontología  Profesional/Unidad 3/1. Contratos Informaticos y Derechos de los Consumidores.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 3/1. Contratos Informaticos y Derechos de los Consumidores.md
@@ -1,100 +1,75 @@
-## Concepto
+Un contrato tiene por objeto la prestación de bienes y servicios vinculados a la información automatizada. Al momento de la redacción y firma de un contrato se deben tener en cuenta los siguientes puntos:
+- **Etapa precontractual**.
+- **Necesidades del usuario**.
+- **Deber de información y consejo**.
+- **Deber del usuario de informar e informarse**.
+- **Documentación apropiada**.
+- **Concepto especial de entrega**.
+- **Puesta en marcha de un sistema informático**.
+- **“Test de aceptación”**.
+- **Garantías propias**.
+- **Suministro de los accesorios**.
+- **Capacitación de personal**.
+- **Mantenimiento de los equipos**.
+- **Suministro de repuestos**.
+- **Actualización de programas**.
 
-Tienen por objeto la prestación de bienes y servicios vinculados a la información automatizada.
+Adicionalmente, surgen una serie de inconvenientes o puntos de inflexión que pueden retrasar o dificultar la redacción y acuerdo de las partes involucradas en el contrato, entre ellos se encuentra:
+- **Dificultades**: En las relaciones contractuales en el mercado informático aparecen conflictos que tienen su origen en:
+	- Problemas de comunicación entre las partes.
+	- Exceso de confianza o de desconfianza.
+	- Desequilibrio en el nivel de conocimientos técnicos, entre otras causas.
+- **Adecuada Documentación**: A las palabras se las lleva el viento. Documentar:
+	- Definición de necesidades del usuario.
+	- Consejos o sugerencias del proveedor.
+	- Conversaciones, acuerdos parciales, cambios de proyecto, etc.
+- **Cumplimiento**: Entrega física no equivale a cumplimiento:
+	- Instalación y puesta en marcha.
+	- Etapas: recepción provisoria y definitiva.
+	- Test de aceptación.
+	- Seguros y riesgos de pérdida de bienes.
+- **Período de Garantía**
+	- La recepción provisoria es posterior a la aprobación del “test de aceptación”
+	- La recepción definitiva puede pactarse luego de un período de garantía, o cuando es posible advertir los vicios con mediana diligencia
+- **Garantías Especiales**
+	- Compatibilidad.
+	- Escalabilidad.
+	- Migrabilidad.
+	- Modularidad.
+- **Obligaciones de Medio y Resultado**
+	- Capacitación.
+	- Mesas de ayuda.
+	- Adaptación y corrección.
+	- Provisión de insumos.
 
-## Aspectos Específicos
-
-- **Etapa precontractual**
-- **Necesidades del usuario**
-- **Deber de información y consejo**
-- **Deber del usuario de informar e informarse**
-- **Documentación apropiada**
-- **Concepto especial de entrega**
-- **Puesta en marcha de un sistema informático**
-- **“Test de aceptación”**
-- **Garantías propias**
-- **Suministro de los accesorios**
-- **Capacitación de personal**
-- **Mantenimiento de los equipos**
-- **Suministro de repuestos**
-- **Actualización de programas**
-
-### Dificultades
-
-En las relaciones contractuales en el mercado informático aparecen conflictos que tienen su origen en:
-- Problemas de comunicación entre las partes
-- Exceso de confianza o de desconfianza
-- Desequilibrio en el nivel de conocimientos técnicos, entre otras causas
-
-### Adecuada Documentación
-
-A las palabras se las lleva el viento. Documentar:
-- Definición de necesidades del usuario
-- Consejos o sugerencias del proveedor
-- Conversaciones, acuerdos parciales, cambios de proyecto, etc.
-
-Incorporar todo esto al contrato.
-
-### Cumplimiento
-
-Entrega física no equivale a cumplimiento:
-- Instalación y puesta en marcha
-- Etapas: recepción provisoria y definitiva
-- Test de aceptación
-- Seguros y riesgos de pérdida de bienes
-
-### Período de Garantía
-
-- Recepción provisoria es posterior a la aprobación del “test de aceptación”
-- Recepción definitiva puede pactarse luego de un período de garantía, o cuando es posible advertir los vicios con mediana diligencia
-
-### Garantías Especiales
-
-- Compatibilidad
-- Escalabilidad
-- Migrabilidad
-- Modularidad
-
-### Obligaciones de Medio y Resultado
-
-- Capacitación
-- Mesas de ayuda
-- Adaptación y corrección
-- Provisión de insumos
-
-## Normativas
-
-- **Art. 42 Constitución Nacional**
-- **Art. 1198 – 512 – 902 Código Civil**
-- **Ley 24240 Defensa del Consumidor**
-- **Ley 11723 Mod. 25036 Propiedad Intelectual**
-- **Ley 25326 Protección de Datos Personales**
-- **Ley 25506 Firma Digital y Documento Electrónico**
-- **Ley 25690 Proveedores de Internet**
-
-### Ley de Defensa del Consumidor
-
-#### Art. 37.- Interpretación
-
+>[!tldr] Normativa Asociada a los Contratos Informáticos
+>- Art. 42 Constitución Nacional.
+>- Art. 1198 – 512 – 902 Código Civil.
+>- Ley 24240 Defensa del Consumidor.
+>- Ley 11723 Mod. 25036 Propiedad Intelectual.
+>- Ley 25326 Protección de Datos Personales.
+>- Ley 25506 Firma Digital y Documento Electrónico.
+>- Ley 25690 Proveedores de Internet.
+## Contrato Electrónico
+Es el acuerdo de voluntades para crear o transferir derechos y obligaciones a través de medios electrónicos, ópticos o de cualquier otra tecnología. La figura de contrato electrónico como medio para la formalización de acuerdos entre partes en la economía digital, se refiere al mensaje de datos que se envía por medios electrónicos y que implica su formalización y aceptación por medios electrónicamente fiables, tales como la firma electrónica, certificado digital y firma electrónica avanzada. Este tipo de contrato posee las siguientes características:
+- **Contratos Celebrados a Distancia**: No hay presencia física simultánea entre las partes contratantes en el momento de suscribir el contrato.
+- **Contratos Concluidos a través de Redes Telemáticas**: Oferta y aceptación por medios electrónicos. No hablaríamos de contrato electrónico, si la oferta no se hace por medio electrónico.
+- **Contratación Indirecta u OFF LINE**: es aquella modalidad de comercio en Internet donde la oferta y aceptación se hace en la red, pero la entrega y/o el pago se producen fuera de la red. Ejemplos de este tipo pueden ser el comercio electrónico de productos y servicios físicos, tal y como la compra de libros a través de Internet, encargo de un servicio que se va a realizar en el domicilio o la compra de un CD que remiten al domicilio.
+## Ley de Defensa del Consumidor
+La Ley de Defensa del Consumidor en Argentina (Ley Nº 24.240) es una normativa que protege los derechos de los consumidores frente a abusos o prácticas comerciales desleales por parte de proveedores y empresas. Busca garantizar la seguridad, información adecuada, y la libertad de elección en las relaciones de consumo. Protege derechos fundamentales como recibir productos y servicios de calidad, acceder a información clara sobre precios y condiciones, y tener mecanismos efectivos para reclamar o exigir compensaciones en caso de incumplimiento.
+### Art. 37 - Interpretación
 Sin perjuicio de la validez del contrato, se tendrán por no convenidas:
-a) Las cláusulas que desnaturalicen las obligaciones o limiten la responsabilidad por daños;
-b) Las cláusulas que importen renuncia o restricción de los derechos del consumidor o amplíen los derechos de la otra parte;
-c) Las cláusulas que contengan cualquier precepto que imponga la inversión de la carga de la prueba en perjuicio del consumidor.
+1. Las cláusulas que desnaturalicen las obligaciones o limiten la responsabilidad por daños.
+2. Las cláusulas que importen renuncia o restricción de los derechos del consumidor o amplíen los derechos de la otra parte.
+3. Las cláusulas que contengan cualquier precepto que imponga la inversión de la carga de la prueba en perjuicio del consumidor.
 
 La interpretación del contrato se hará en el sentido más favorable para el consumidor. Cuando existan dudas sobre los alcances de su obligación, se estará a la que sea menos gravosa.
-
 En caso de que el oferente viole el deber de buena fe, en la etapa previa a la conclusión del contrato o en su celebración o transgreda el deber de información o la legislación de defensa de la competencia o de lealtad comercial, el consumidor tendrá derecho a demandar la nulidad del contrato o la de una o más cláusulas. Cuando el juez declare la nulidad parcial, simultáneamente integrará el contrato, si ello fuera necesario.
-
-#### Art. 38.- Contrato de adhesión
-
+### Art. 38 - Contrato de Adhesión
 Contratos en formularios. La autoridad de aplicación vigilará que los contratos de adhesión o similares, no contengan cláusulas de las previstas en el artículo anterior. La misma atribución se ejercerá respecto de las cláusulas uniformes, generales o estandarizadas de los contratos hechos en formularios, reproducidos en serie y en general, cuando dichas cláusulas hayan sido redactadas unilateralmente por el proveedor de la cosa o servicio, sin que la contraparte tuviere posibilidades de discutir su contenido.
-
-#### Art. 39.- Modificación contratos tipo
-
+### Art. 39 - Modificación Contratos Tipo
 Cuando los contratos a los que se refiere el artículo anterior requieran la aprobación de otra autoridad nacional o provincial, ésta tomará las medidas necesarias para la modificación del contrato tipo a pedido de la autoridad de aplicación.
-
 ## Conclusiones
-
 1. Los contratos informáticos son esquivos a su encasillamiento en los tipos tradicionales.
 2. Son contratos con características especiales.
 3. Son complejos ya que la noción de “sistema” obliga a analizar todo en conjunto (soportes físico y lógico, datos y usuarios).
@@ -104,8 +79,3 @@ Cuando los contratos a los que se refiere el artículo anterior requieran la apr
 7. Es importante para los consumidores tratar de configurar la prestación del proveedor como obligación de resultado.
 8. Las cláusulas abusivas pueden ser neutralizadas con la LDC.
 
-## Contrato Electrónico
-Es el acuerdo de voluntades para crear o transferir derechos y obligaciones a través de medios electrónicos, ópticos o de cualquier otra tecnología. La figura de contrato electrónico como medio para la formalización de acuerdos entre partes en la economía digital, se refiere al mensaje de datos que se envía por medios electrónicos y que implica su formalización y aceptación por medios electrónicamente fiables, tales como la firma electrónica, certificado digital y firma electrónica avanzada. Este tipo de contrato posee las siguientes características:
-- **Contratos Celebrados a Distancia**: No hay presencia física simultánea entre las partes contratantes en el momento de suscribir el contrato.
-- **Contratos Concluidos a través de Redes Telemáticas**: Oferta y aceptación por medios electrónicos. No hablaríamos de contrato electrónico, si la oferta no se hace por medio electrónico.
-- **Contratación Indirecta u OFF LINE**: es aquella modalidad de comercio en Internet donde la oferta y aceptación se hace en la red, pero la entrega y/o el pago se producen fuera de la red. Ejemplos de este tipo pueden ser el comercio electrónico de productos y servicios físicos, tal y como la compra de libros a través de Internet, encargo de un servicio que se va a realizar en el domicilio o la compra de un CD que remiten al domicilio.
