--- a/5º Año/Ética y Deontología  Profesional/Unidad 3/2. El Derecho y la Propiedad Intelectual en los Entornos Digitales.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 3/2. El Derecho y la Propiedad Intelectual en los Entornos Digitales.md
@@ -1,8 +1,6 @@
-
 La propiedad intelectual hace referencia a las creaciones de la mente, es decir, los inventos, las obras literarias y artísticas, los símbolos, los nombres, las imágenes, los dibujos y modelos. Está relacionada con las patentes, las marcas registradas y los derechos de autor. La propiedad intelectual se divide en dos categorías:
 - **Derecho de Autor (Copyright)**: Abarca las obras literarias (por ejemplo, las novelas, los poemas y las obras de teatro), las películas, la música, las obras artísticas (por ejemplo, dibujos, pinturas, fotografías y esculturas) y los diseños arquitectónicos.
 - **Propiedad Industrial**: Abarca las patentes de invención, las marcas, los diseños industriales y las indicaciones geográficas. Se asemejan a cualquier otro derecho de propiedad: permiten al creador, o al titular de una patente, marca o derecho de autor, gozar de los beneficios que derivan de su obra o de la inversión realizada en relación con una creación.
-
 ## Derechos de la Propiedad Intelectual
 La propiedad intelectual existe, ya que las personas se sienten más motivadas a seguir investigando y creando si saben que pueden obtener un beneficio de ello. Además de sentir una seguridad al compartir la información si se sienten protegidos.
 Los derechos de propiedad intelectual sobre una obra duran mientras el autor este vivo, más 70 años después de su fallecimiento. Dichos derechos son heredables a familiares o hijos y pueden venderse, adquirirse o regalarse parcial o totalmente. Los derechos de autor protegen las siguientes creaciones: 
@@ -11,7 +9,6 @@ Los derechos de propiedad intelectual sobre una obra duran mientras el autor est
 
 Los títulos, ideas, métodos, procesos, resultados experimentales, conclusiones, obras de dominio público y obras producidas por empleados del gobierno federal como parte de sus tareas no son protegidos por los derechos de autor.
 En el caso de los autores, los derechos de autor se establecen automáticamente una vez la obra está plasmada en un medio tangible. En caso de que se quiera iniciar una acción legar o en caso de querer recibir una compensación económica de la obra, la misma si debe estar registrada,
-
 >[!tldr] Criterios para Determinar Uso de los Derechos de Autor
 >- Propósito y la naturaleza del uso (comercial vs. no comercial).
 >- Naturaleza de la obra copiada (ficción vs. no ficción, sin fines vs. con fines de lucro, distribución amplia vs. limitada).
@@ -23,7 +20,6 @@ El plagio y una violación a los derechos de autor, si bien son parecidos, no so
 En nuestro país la Ley de Propiedad Intelectual (N.º 11.723), ha sido modificada sucesivamente. Entre las actualizaciones más recientes podemos citar la ley N.º 25.036, sancionada el 14 de octubre de 1998 que, a través de la modificación al artículo 1 y de incorporaciones en diferentes artículos, introduce el término programas de computación, y la protección y explotación de esos derechos.
 El decreto N.° 165/94 de la ley 11.723 precisa el alcance de la denominación obras de software y obras de bases de datos, qué procedimientos se consideran idóneos para su reproducción y cuáles son sus características de publicación. Abarca también el procedimiento para el registro de obras de software y de bases de datos, tanto publicadas como inéditas.
 Después de los años 70, el acelerado crecimiento en el desarrollo de los softwares se comienza a advertir luego de la gran difusión de las microcomputadoras entre la población. Es a partir de ese momento cuando se comienza a hablar de la piratería del software y el problema de la copia adquiere un gran impacto ante el número creciente de usuarios.
-
 >[!tldr] Ventajas y Desventajas de la Protección por Derecho de Autor y por Patentamiento
 >- Protección por derechos de autor
 >	- **Ventajas**: No se requiere una solicitud diferente en cada país donde se desea registrar una obra, y no requiere revelar el programa fuente.
@@ -33,12 +29,10 @@ Después de los años 70, el acelerado crecimiento en el desarrollo de los softw
 >	- **Desventajas**: No todos los programas de computación logran alcanzar el requerido nivel de novedad y de calidad inventiva requeridos para lograr su patentamiento. Otra desventaja es que el derecho de patentes es un derecho territorial que se obtiene dentro de los límites de un país, razón por la cual, para obtener dicho derecho en diferentes países, debe ser tramitado en cada uno de ellos. Además, el patentamiento exige revelar el programa fuente, o conjunto de instrucciones que desarrolla el programador en la etapa original de su creación, lo cual implica divulgar ampliamente el invento y, en verdad, nadie quiere revelar el secreto de cómo ha realizado un programa.
 
 En nuestro país la ley N.° 25.036, incorpora contratos de tipo diferente a los de cesión o venta de los derechos de autor, como es el de licenciamiento del software.
-
 >[!quote] Cita ley N.° 25.036
 >“*La protección de la propiedad intelectual sobre los programas de computación incluirá entre otras formas, los contratos de licencia para su uso o reproducción*” 
 
 Con respecto a este último, el artículo 9º de esta ley, establece una referencia al contrato de licencia de uso, en cuyo caso se permite la copia de salvaguarda.
-
 >[!quote]
 >“*Quien haya recibido de los autores o de los derechohabientes de un programa de computación una licencia para usarlo, podrá reproducir una única copia de salvaguardia de los ejemplares originales del mismo. \[...\] La copia de salvaguardia no podrá ser utilizada para otra finalidad que la de reemplazar el ejemplar original del programa de computación licenciado si ese original se pierde o deviene inútil su utilización*”.
 ### Propiedad Intelectual en Internet
@@ -47,7 +41,7 @@ En referencia al nuevo espacio de acción en donde se desarrolla el Derecho, la 
 - Muchas de las comunicaciones que se transmiten a través de la red carecen de vínculos que permitan ubicarlas en algún lugar físico, son fenómenos no localizables.
 - En la red se pueden realizar transacciones simultáneas entre personas que no se conocen y que tampoco pueden conocer la dirección física de la contraparte.
 
-Consecuentemente, “ya no hay espacio físico, ni autoridad central, ni un órgano de control o aplicación de normas. El paradigma de nación contra nación en las relaciones internacionales ha sido modificado por individuo contra individuo en este ámbito” (Martínez Fazzalari, 1999:17).
+Consecuentemente, “*ya no hay espacio físico, ni autoridad central, ni un órgano de control o aplicación de normas. El paradigma de nación contra nación en las relaciones internacionales ha sido modificado por individuo contra individuo en este ámbito*” (Martínez Fazzalari, 1999:17).
 Los productos con destino a la educación, la cultura, la información o el entretenimiento, que tradicionalmente se soportaron en publicaciones impresas, soportes fonográficos y audiovisuales o emisiones de radio y TV, entre otros, son actualmente productos ideales susceptibles de intervenir en el comercio electrónico. 
 La temática que relaciona la distribución de estos productos en Internet y la protección de la propiedad intelectual, requiere de procedimientos para:
 - La identificación de los contenidos y de los objetos digitales incorporados en la red.
@@ -67,7 +61,6 @@ Podemos definir al comercio electrónico como cualquier forma de transacción o 
 En nuestro país, a través de la sanción de la Ley 24.425, se aprobaron las actas finales de la Ronda Uruguay sobre Negociaciones Económicas Multilaterales que dieron origen a la Organización Mundial del Comercio (OMC).
 Esta organización ha propuesto entre sus objetivos el “*establecer un marco multilateral de principios y normas para el comercio en condiciones de transparencia y de liberalización progresiva y como medio de promover el crecimiento económico de todos los interlocutores comerciales y el desarrollo de los países*”.
 Argentina suscribió también la Declaración sobre el Comercio Electrónico Mundial, que fijaba entre sus objetivos establecer un plan de trabajo para examinar las cuestiones relacionadas con el comercio electrónico mundial, que afectan el comercio, incluidas las identificadas por los miembros.
-
 >[!tldr] Ventajas y Desventajas del Comercio Electrónico
 >- **Ventajas**:
 >	- Agilización de todos los procesos.
